# dronalize

./: .gitignore  LICENSE  README.md  arguments.py  config.toml  dronalize.toml  mkdocs.yml  preprocess.sh  pyproject.toml  test.py  train.py  train.sh  utils.py  zensical.toml
.github/workflows/: apptainer-image.yml  ci.yml  docker-image.yml  manual-ci.yml  pypi.yml  release.yml
configs/rounD/: example.yml  rd_mtp_go.yml
configs/synthD/: ci.yml
datamodules/: __init__.py  dataloader.py  dataset.py  transforms.py
docs/: changelog.md  cite.md  contributing.md  data_loading.md  datasets.md  index.md  installation.md  metrics.md  modeling.md  preprocessing.md  related_work.md  training.md
docs/api/: config.md  converters.md  core.md  datasets.md  execution.md  index.md  pipeline.md  plot.md
docs/community/: citation.md  contributing.md  index.md  license.md  related-work.md
docs/concepts/: architecture.md  configuration-model.md  datasets.md  filtering.md  highway.md  index.md  lane-change-sampling.md  map-processing.md  outputs-and-schemas.md  screening.md  split-strategies.md
docs/formats/: index.md  manifest.md  reading.md  schema.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/outputs/: index.md  mds.md
docs/start/: adding-datasets.md  changelog.md  citation.md  first-run-cli.md  index.md  installation.md  python-entry.md
docs/stylesheets/: extra.css
docs/user-guide/: data-loading.md  index.md  metrics.md  modeling.md  preprocessing.md  training.md  visualization.md
dronalize/: __main__.py  categories.py  exceptions.py  scene.py
dronalize/_internal/: _compat.py  _types.py
dronalize/builders/: __init__.py
dronalize/cli/: __init__.py  progress.py
dronalize/config/: __init__.py  config.py  filtering.py  loader.py  map.py
dronalize/converters/: numpy.py  pytorch.py
dronalize/core/: __init__.py  _compat.py  _types.py  base.py  categories.py  exceptions.py  graph_builder.py  interfaces.py  loader.py  map_graph.py  map_resolver.py  parallel.py  pipeline.py  pipelines.py  pipelines_factories.py  scene.py  split.py  transforms.py  writer.py
dronalize/datasets/: __init__.py  _registry.py  registry.py
dronalize/execution/: assigner.py  common.py  executor.py  parallel.py  progress.py  runner.py  sequential.py
dronalize/loaders/: __init__.py
dronalize/loading/: __init__.py  loader.py
dronalize/maps/: builder.py  graph.py  resolver.py
dronalize/ops/: __init__.py
dronalize/pipeline/: __init__.py  factories.py  parallel.py  pipeline.py  split.py  transforms.py
dronalize/plot/: __init__.py  map.py  overlay.py  trajectory.py
dronalize/processing/: __init__.py  config.py  parallel.py  runner.py  sequential.py
examples/: custom_dataset.py
metrics/: __init__.py  collision_rate.py  exp_de.py  log_likelihood.py  min_ade.py  min_apde.py  min_brier.py  min_fde.py  miss_rate.py  utils.py
metrics/unittest/: test_ade.py  test_apde.py  test_brier.py  test_collision_rate.py  test_expde.py  test_fde.py  test_mr.py  test_nll.py  test_utils.py
models/mtp_go/: litmodule.py  loss_fns.py  model.py
models/prototype/: litmodule.py  model.py
preprocessing/: __init__.py  arguments.py  preprocess_apollo.py  preprocess_argoverse.py  preprocess_av2.py  preprocess_ethucy.py  preprocess_highway.py  preprocess_interact.py  preprocess_lyft.py  preprocess_nuscenes.py  preprocess_opendd.py  preprocess_urban.py  preprocess_vod.py  preprocess_waymo.py
preprocessing/10Hz_configs/: A43_10Hz.yml  SIND_10Hz.yml  ad4che_10Hz.yml  apollo_10Hz.yml  argoverse_10Hz.yml  av2_10Hz.yml  ethucy_10Hz.yml  exiD_10Hz.yml  highD_10Hz.yml  i80_10Hz.yml  inD_10Hz.yml  interact_10Hz.yml  lyft_10Hz.yml  nuscenes_10Hz.yml  opendd_10Hz.yml  rounD_10Hz.yml  uniD_10Hz.yml  us101_10Hz.yml  vod_10Hz.yml  waymo_10Hz.yml
preprocessing/common/: agent_data.py
preprocessing/configs/: A43.yml  ad4che.yml  apollo.yml  argoverse.yml  av2.yml  ethucy.yml  i80.yml  interact.yml  lyft.yml  nuscenes.yml  opendd.yml  us101.yml  vod.yml  waymo.yml
preprocessing/core/: __init__.py  _compat.py  categories.py  map_context.py  map_graph.py  parallel.py  scene.py
preprocessing/road_network/: __init__.py  common.py  edge_type.py  viz_graph.py
preprocessing/trajectory/: categories.py  ethucy.py  interface.py  lyft.py  plot.py  resample.py  utils.py
preprocessing/utils/: __init__.py  common.py  ethucy_utils.py  exit_utils.py  highway_utils.py  interact_utils.py  interface.py  lyft_utils.py  nuplan_utils.py  nuscenes_split.py  nuscenes_utils.py  opendd_utils.py  urban_utils.py  vod_split.py  vod_utils.py
src/dronalize/: __init__.py  __main__.py  _lazy.py  categories.py  exceptions.py  visualization.py
tests/: conftest.py  support.py  test_assigner.py  test_config.py  test_config_resolution.py  test_documented_surface.py  test_loader.py  test_pipeline.py  test_public_api.py  test_registry.py  test_scene.py  test_split.py
tests/api/: test_public_api.py
tests/config/: test_config.py  test_screening_compilation.py
tests/core/: test_scene_contracts.py
tests/datasets/: test_registry.py
tests/docs/: test_documented_surface.py
tests/execution/: __init__.py  test_assigner.py  test_runner.py
tests/filters/: test_agent_rules.py  test_apply.py  test_cleanup_rules.py  test_scene_rules.py
tests/integration/: assertions.py  catalog.py  conftest.py  test_datasets.py  test_datasets_mocked.py
tests/io/: test_adapters.py  test_optional_imports.py  test_pyg.py  test_roundtrip.py  test_roundtrip_behavior.py  test_spec.py
tests/pipeline/: test_basic.py  test_block.py  test_derivative.py  test_filter.py  test_pipeline.py  test_rebalance.py  test_resample.py  test_split.py  test_window.py
tests/processing/: test_assigner.py  test_screening.py
tests/runtime/: test_cli.py  test_config.py  test_entry_flow.py  test_runner.py  test_runtime.py  test_runtime_behavior.py
tests/screening/: test_agent_rules.py  test_cleanup_rules.py  test_scene_rules.py
tests/storage/: test_optional_imports.py  test_roundtrip.py  test_spec.py
visualization/: __init__.py  utils.py
(+989 files in other folders)
