[build-system]
requires = ["uv_build>=0.10,<0.11.0"]
build-backend = "uv_build"

[project]
name = "dronalize"
version = "1.3.0"
description = "Trajectory data processing toolkit for autonomous driving datasets"
authors = [
    { name = "Theodor Westny", email = "theodor.westny@liu.se" },
    { name = "David Axelsson", email = "david.axelsson@liu.se" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24.0",
    "polars>=1.0.0",
    "pyarrow>=14.0.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
    "utm>=0.7.0",
    "typing-extensions>=4.15.0",
    "pydantic>=2.12.5",
    "mosaicml-streaming>=0.13.0",
]

[project.scripts]
dronalize = "dronalize.__main__:main"

[project.optional-dependencies]
# Plotting (map graphs, trajectories)
plot = ["altair>=5.0.0"]

# Dataset-specific extras
lyft = ["zarr<3", "numcodecs<=0.13.1", "protobuf>=4.25.8"]
waymo = ["protobuf>=4.25.8"]
ad4che = ["opencv-python"]

all_datasets = ["dronalize[lyft]", "dronalize[waymo]", "dronalize[ad4che]"]

# Minimal PyTorch dependency for the dataloader implementation
loader = ["torch>=2.0.0"]

# Full ML stack for running the example training pipeline
example = [
    "dronalize[loader]",
    "torchmetrics>=0.11.0",
    "torch_geometric>=2.3.0",
    "torch-cluster",
    "lightning>=2.0.0",
    "wandb>=0.15.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "scipy-stubs",
    "ipython",
    "dronalize[plot,lyft,ad4che]",
]
tools = [
    "pyrefly>=0.55.0",
    "ruff>=0.15.4",
]

[tool.uv.build-backend]
module-name = "dronalize"
module-root = ""
# Exclude
exclude = ["tests*", "examples*"]

[tool.uv.extra-build-dependencies]
torch-cluster = ["torch"]

[tool.pytest.ini_options]
testpaths = ["tests", "dronalize"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--doctest-modules", "-ra"]

[tool.ruff]
# Exclude proto compiled files from linting and formatting
extend-exclude = ["*_pb2.py", "*_pb2_grpc.py", "*_pb2.pyi", "protos/*"]
line-length = 100
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", "D213", "COM812", "PLR2004", "DOC201", "DOC501",
    "T201", "S101", "TRY003", "D100", "B008", "PLR0904",
    "TD002", "TD003", "PLR0913", "PLR0917", "PLR0914",
    "DOC402", "CPY001", "D104", "TD005", "S405", "S314",
    "RUF067", "PLC2801",
]
pydocstyle = { convention = "numpy" }

[tool.ruff.format]
quote-style = "double"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
project-excludes = [
    "protos/*",
    # "tests/*",
    # "examples/*",
    "**/*_pb2.py",
    "**/*_pb2.pyi",
]
