[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "dronalize"
version = "2.0.0"
description = "Trajectory data processing toolkit for autonomous driving datasets"
authors = [
    { name = "Theodor Westny", email = "theodor.westny@liu.se" },
    { name = "David Axelsson", email = "david.axelsson@liu.se" },
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24.0",
    "polars>=1.0.0",
    "scipy>=1.10.0",
    "typing-extensions>=4.15.0",
    "pydantic>=2.12.5",
    "tomli>=2.0.1; python_version < '3.11'",
]

keywords = ["autonomous driving", "trajectory data", "data processing", "datasets", "machine learning"]

classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/davaxe/dronalize"
Repository = "https://github.com/davaxe/dronalize"
Documentation = "https://westny.github.io/dronalize/"
Issues = "https://github.com/davaxe/dronalize/issues"
Changelog = "https://github.com/davaxe/dronalize/blob/main/CHANGELOG.md"

[project.scripts]
dronalize = "dronalize.__main__:main"

[project.optional-dependencies]
viz = []
lyft = ["zarr<3", "numcodecs<=0.13.1", "protobuf>=4.25.8"]
waymo = ["protobuf>=4.25.8"]
ad4che = ["opencv-python"]
mds = ["mosaicml-streaming>=0.13.0"]
torch = ["torch>=2.0.0"]
pyg = ["torch>=2.0.0", "torch-geometric>=2.7.0"]
cli = ["typer>=0.24.1", "rich>=14.3.3"]

[dependency-groups]
test = [
    "coverage>=7.13.5",
    "pytest>=7.0",
]

lint = [
    "ruff>=0.11",
]

typecheck = [
    "basedpyright>=1.0.0",
    "scipy-stubs",
    "tomli>=2.0.1",
]

build = [
    "build>=1.2.2",
]

docs = [
    "mkdocstrings[python]>=1.0.3",
    "zensical>=0.0.30",
]

dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "typecheck" },
    { include-group = "build" },
    { include-group = "docs" },
]

[tool.hatch.build.targets.wheel]
packages = ["src/dronalize"]

[tool.hatch.build.targets.sdist]
exclude = ["tests", "examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-ra", "-q"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "dataset(name): marks tests that require a specific dataset (deselect with '-m \"not dataset\"')",
]
filterwarnings = [
    "ignore:.*torch_geometric\\.distributed.*:DeprecationWarning",
    "ignore:.*torch\\.jit\\.script.*:DeprecationWarning",
]

[tool.coverage.run]
branch = true
omit = [
    "src/dronalize/datasets/*/protos/*.py",
]

[tool.ty.src]
exclude =  ["*_pb2.py", "*_pb2_grpc.py", "*_pb2.pyi", "protos/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 50

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
# Exclude proto compiled files from linting and formatting
extend-exclude = ["*_pb2.py", "*_pb2_grpc.py", "*_pb2.pyi", "protos/*"]
line-length = 100
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",
    "D213",
    "COM812",
    "PLR2004",
    "DOC201",
    "DOC501",
    "TRY003",
    "D100",
    "PLR0904",
    "TD002",
    "TD003",
    "PLR0913",
    "PLR0917",
    "PLR0914",
    "DOC402",
    "CPY001",
    "D104",
    "TD005",
    "PLC2801",
    "D101",
]
pydocstyle = { convention = "numpy" }

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "INP001", "S101", "PLC2701"]
"examples/**/*.py" = ["D", "INP001", "S101", "PLC2701", "T201"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.basedpyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "recommended"
reportIgnoreCommentWithoutRule = true
include = ["src", "tests"]
exclude = [
    "protos",
    "**/protos",
    "**/*_pb2.py",
    "**/*_pb2.pyi",
    "**/*_pb2_grpc.py",
]
ignore = [
    "protos",
    "**/protos",
    "**/*_pb2.py",
    "**/*_pb2.pyi",
    "**/*_pb2_grpc.py",
]
reportAny = false
reportExplicitAny = false
reportMissingTypeStubs = false
reportPrivateImportUsage = false
